--- a/partials/german/publications.hbs
+++ b/partials/german/publications.hbs
@@ -1,7 +1,7 @@
 {{#if resume.publications.length}}
 <section id="publications">
   <div class="left">
-    <h2>Publications</h2>
+    <h2>Publikationen</h2>
   </div>
 
   <div class="right">
