--- a/partials/german/references.hbs
+++ b/partials/german/references.hbs
@@ -1,7 +1,7 @@
 {{#if resume.references.length}}
 <section id="references">
   <div class="left">
-    <h2>References</h2>
+    <h2>Referenzen</h2>
   </div>
 
   <div class="right">
