--- a/resume.hbs
+++ b/resume.hbs
@@ -10,7 +10,6 @@
   <style>
   {{{css}}}
   </style>
-
   </head>
   <body>
 
@@ -21,6 +20,7 @@
     {{> education }}
     {{> awards }}
     {{> publications }}
+    {{> projects }}
     {{> skills }}
     {{> languages }}
     {{> interests }}
@@ -29,7 +29,7 @@
 
   <div class="copy">
     Powered by <a href="https://jsonresume.org" target="_blank">JSON Resume</a> &sdot;
-    Theme by <a href="https://github.com/assimovt">Tair Assimov</a>
+    Theme by <a href="https://github.com/perororo">Petar Prole</a>
   </div>
   </body>
 </html>
