--- a/partials/english/volunteer.hbs
+++ b/partials/english/volunteer.hbs
@@ -1,11 +1,10 @@
-{{#if resume.work.length}}
-<section id="work">
+{{#if resume.volunteer.length}}
+<section id="volunteer">
   <div class="left">
-    <h2>Work</h2>
+    <h2>Volunteer</h2>
   </div>
-
   <div class="right">
-    {{#each resume.work}}
+    {{#each resume.volunteer}}
     <div class="item">
       <div class="date">
         {{#if startDate}}
@@ -23,9 +22,9 @@
         </span>
         {{/if}}
       </div>
-      {{#if company}}
-      <h3 class="name">
-        {{company}}
+      {{#if organization}}
+      <h3 class="company">
+        {{organization}}
       </h3>
       {{/if}}
       {{#if position}}
