--- a/partials/german/awards.hbs
+++ b/partials/german/awards.hbs
@@ -1,7 +1,7 @@
 {{#if resume.awards.length}}
 <section id="awards">
   <div class="left">
-    <h2>Awards</h2>
+    <h2>Auszeichnungen</h2>
   </div>
 
   <div class="right">
