--- a/partials/german/interests.hbs
+++ b/partials/german/interests.hbs
@@ -1,18 +1,15 @@
-{{#if resume.skills.length}}
-<section id="skills">
+{{#if resume.interests.length}}
+<section id="interests">
   <div class="left">
-    <h2>Skills</h2>
+    <h2>Interessen</h2>
   </div>
 
   <div class="right">
-    {{#each resume.skills}}
+    {{#each resume.interests}}
     <div class="item">
       {{#if name}}
       <span class="name">
         {{name}}
-        {{#if level}}
-        <em class="level">{{level}}</em>
-        {{/if}}
       </span>
       {{/if}}
       {{#if keywords.length}}
