--- a/partials/german/volunteer.hbs
+++ b/partials/german/volunteer.hbs
@@ -1,11 +1,11 @@
-{{#if resume.education.length}}
-<section id="education">
+{{#if resume.volunteer.length}}
+<section id="volunteer">
   <div class="left">
-    <h2>Education</h2>
+    <h2>Freiwilligenarbeit</h2>
   </div>
 
   <div class="right">
-    {{#each resume.education}}
+    {{#each resume.volunteer}}
     <div class="item">
       <div class="date">
         {{#if startDate}}
@@ -23,27 +23,29 @@
         </span>
         {{/if}}
       </div>
-      {{#if institution}}
-      <h3 class="institution">
-        {{institution}}
+      {{#if organization}}
+      <h3 class="company">
+        {{organization}}
       </h3>
       {{/if}}
-      {{#if area}}
-      <h4 class="area">
-        {{area}}
+      {{#if position}}
+      <h4 class="position">
+        {{position}}
       </h4>
       {{/if}}
-      {{#if studyType}}
-      <div class="studyType">
-        {{studyType}}
-        {{#if gpa}}
-        <em class="gpa">GPA: {{gpa}}</em>
-        {{/if}}
+      {{#if website}}
+      <div class="website">
+        <a href="{{website}}">{{website}}</a>
       </div>
       {{/if}}
-      {{#if courses.length}}
-      <ul class="courses">
-        {{#each courses}}
+      {{#if summary}}
+      <div class="summary">
+        <p>{{summary}}</p>
+      </div>
+      {{/if}}
+      {{#if highlights.length}}
+      <ul class="highlights">
+        {{#each highlights}}
         <li>{{.}}</li>
         {{/each}}
       </ul>
