--- a/partials/english/projects.hbs
+++ b/partials/english/projects.hbs
@@ -25,7 +25,7 @@
       <h4>Summary</h4>
       {{#if description}}
       <div class="summary">
-        <p>{{description}}</p>
+        <p>{{{description}}}</p>
       </div>
       {{/if}}
       <h4>Roles</h4>
